--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-app",
+  "name": "frontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.0",
     "input-moment": "^0.4.0",
+    "moment": "^2.29.1",
     "mongodb": "^3.6.3",
     "react": "^17.0.1",
     "react-datetime-picker": "^3.0.4",
